# triton-ascend

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.zh.md  CONTRIBUTING_zh.md  LICENSE  Makefile  OWNERS  README.md  SECURITYNOTE.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
ascend/triton-adapter/: CMakeLists.txt  safe_compile.cmake  triton_adapter.cc
ascend/triton-adapter/include/: CMakeLists.txt
ascend/triton-adapter/include/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.h  Passes.h  Passes.td
ascend/triton-adapter/include/TritonLinearize/: MaskAnalysis.h  OpFoldResultUtils.h  Passes.h  PtrAnalysis.h  TritonLinearize.h
ascend/triton-adapter/include/TritonToAnnotation/: CMakeLists.txt  Passes.h  Passes.td
ascend/triton-adapter/include/TritonToHFusion/: Passes.h
ascend/triton-adapter/include/TritonToHIVM/: Passes.h
ascend/triton-adapter/include/TritonToLLVM/: Passes.h
ascend/triton-adapter/include/TritonToLinalg/: ArgMinMaxConverter.h  BlockPtrAnalysis.h  DescriptorConverter.h  HoistBroadcast.h  LoadStoreConverter.h  MaskAnalysis.h  Passes.h  Passes.td  TritonOpConverter.h  TritonToLinalgPass.h  UseAnalysis.h
ascend/triton-adapter/include/TritonToStructured/: CMakeLists.txt  MaskAnalysis.h  Passes.h  TritonToStructuredPass.h
ascend/triton-adapter/include/TritonToUnstructure/: BubbleUpOperation.h  OffsetAnalysis.h  Passes.h  Passes.td  UnstructureConversionPass.h
ascend/triton-adapter/include/Utils/: InterleaveOptimization.h  Utils.h
ascend/triton-adapter/lib/: CMakeLists.txt
ascend/triton-adapter/lib/Dialect/: CMakeLists.txt
ascend/triton-adapter/lib/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.cpp
ascend/triton-adapter/lib/TritonLinearize/: MaskAnalysis.cpp  PtrAnalysis.cpp  TritonLinearize.cpp  TritonLinearizePass.cpp
ascend/triton-adapter/lib/TritonToAnnotation/: CMakeLists.txt  TritonToAnnotation.cpp
ascend/triton-adapter/lib/TritonToHFusion/: TritonToHFusion.cpp
ascend/triton-adapter/lib/TritonToHIVM/: TritonToHIVM.cpp
ascend/triton-adapter/lib/TritonToLLVM/: TritonToLLVM.cpp
ascend/triton-adapter/lib/TritonToLinalg/: ArgMinMaxConverter.cpp  BlockPtrAnalysis.cpp  CMakeLists.txt  DescriptorConverter.cpp  FunctionConverter.cpp  HoistBroadcast.cpp  LoadStoreConverter.cpp  MaskAnalysis.cpp  TritonOpConverter.cpp  TritonToLinalgPass.cpp  UseAnalysis.cpp
ascend/triton-adapter/lib/TritonToStructured/: CannonicalizerConverter.cpp  MaskAnalysis.cpp  MemOpConverter.cpp  PtrAnalysis.cpp
ascend/triton-adapter/lib/TritonToUnstructure/: BubbleUpOperation.cpp  (+3 more)
(+888 files in other folders)
