add_subdirectory(TritonToAnnotation)
add_subdirectory(TritonToHIVM)
add_subdirectory(TritonToHFusion)
add_subdirectory(TritonToLinalg)
add_subdirectory(TritonToLLVM)
add_subdirectory(DiscreteMaskAccessConversion)
add_subdirectory(TritonToUnstructure)
add_subdirectory(Dialect)
add_subdirectory(TritonLinearize)
add_subdirectory(Utils)
